tests/error/poly_errors/free_return_var.err
Error: Cannot infer type (at $FILE:13:8)
   | 
11 | @guppy
12 | def main() -> None:
13 |     x = foo()
   |         ^^^^^ Cannot infer type variables in expression of type `?T`

Guppy compilation failed due to 1 previous error
